--- a/source/Weaver2.lpi
+++ b/source/Weaver2.lpi
@@ -17,6 +17,7 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
+      <BuildNr Value="2"/>
       <StringTable CompanyName="MKSZTSZ" FileDescription="Weaver2"/>
     </VersionInfo>
     <BuildModes>
