--- a/source/Weaver2.lpi
+++ b/source/Weaver2.lpi
@@ -17,7 +17,7 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <BuildNr Value="8"/>
+      <BuildNr Value="9"/>
       <StringTable CompanyName="MKSZTSZ" FileDescription="Weaver2"/>
     </VersionInfo>
     <BuildModes>
@@ -54,6 +54,7 @@
               <DebugInfoType Value="dsDwarf3"/>
               <UseHeaptrc Value="True"/>
               <TrashVariables Value="True"/>
+              <UseExternalDbgSyms Value="True"/>
             </Debugging>
           </Linking>
           <Other>
