--- a/source/Weaver2.lpi
+++ b/source/Weaver2.lpi
@@ -17,7 +17,8 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <BuildNr Value="11"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="1"/>
       <StringTable CompanyName="MKSZTSZ" FileDescription="Weaver2"/>
     </VersionInfo>
     <BuildModes>
